# ptouch-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  release.yml
crates/ptouch-cli/: Cargo.toml
crates/ptouch-cli/src/: main.rs
crates/ptouch-core/: Cargo.toml
crates/ptouch-core/src/: device.rs  error.rs  lib.rs  protocol.rs  status.rs  tape.rs  transport.rs
crates/ptouch-gui/: Cargo.toml  build.rs
crates/ptouch-gui/src/: app.rs  main.rs  printer_worker.rs  state.rs  widgets.rs
crates/ptouch-gui/src/panels/: canvas.rs  mod.rs  properties.rs  sidebar.rs  status_bar.rs  toolbar.rs
crates/ptouch-render/: Cargo.toml
crates/ptouch-render/src/: base64_bytes.rs  bitmap.rs  compose.rs  document.rs  font.rs  image_loader.rs  lib.rs  raster.rs  text.rs
data/: io.github.vowstar.ptouch-gui.desktop
data/macos/: Info.plist  ptouch-gui.icns
data/udev/: 20-usb-ptouch-permissions.rules
packaging/: nfpm.yaml  postinstall.sh
scripts/: gen-icons.sh
udev/: 20-usb-ptouch-permissions.rules
