# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 Huang Rui <vowstar@gmail.com>

[workspace]
resolver = "3"
members = [
    "crates/ptouch-core",
    "crates/ptouch-render",
    "crates/ptouch-cli",
    "crates/ptouch-gui",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Huang Rui <vowstar@gmail.com>"]
license = "MIT"
repository = "https://github.com/vowstar/ptouch-rs"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
