# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 Huang Rui <vowstar@gmail.com>

[package]
name = "ptouch-cli"
description = "Command-line tool for Brother P-Touch label printers"
version.workspace = true
edition.workspace = true
authors.workspace = true
# Original CLI source is MIT, but the binary links the GPL ptouch-core crate,
# so the distributed program is GPL-3.0-or-later.
license = "MIT AND GPL-3.0-or-later"
repository.workspace = true

[[bin]]
name = "ptouch"
path = "src/main.rs"

[dependencies]
ptouch-core = { path = "../ptouch-core" }
ptouch-render = { path = "../ptouch-render" }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
log = "0.4"
env_logger = "0.11"
