# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 Huang Rui <vowstar@gmail.com>

[package]
name = "ptouch-gui"
description = "GUI application for Brother P-Touch label printers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ptouch-gui"
path = "src/main.rs"

[dependencies]
ptouch-core = { path = "../ptouch-core" }
ptouch-render = { path = "../ptouch-render" }
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "glow",
    "wayland",
    "x11",
    "persistence",
] }
wgpu = { version = "27", default-features = false, features = ["vulkan", "gles", "wgsl", "std"] }
egui_extras = { version = "0.33", features = ["image"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
