# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 Huang Rui <vowstar@gmail.com>

[package]
name = "ptouch-gui"
description = "GUI application for Brother P-Touch label printers"
version.workspace = true
edition.workspace = true
authors.workspace = true
# Original GUI source is MIT, but the binary links the GPL ptouch-core crate,
# so the distributed program is GPL-3.0-or-later.
license = "MIT AND GPL-3.0-or-later"
repository.workspace = true

[[bin]]
name = "ptouch-gui"
path = "src/main.rs"

# macOS: consumed by `cargo bundle` to produce a .app with a Dock/Finder icon.
# Inert for a normal `cargo build`. The .icns comes from scripts/gen-icons.sh.
[package.metadata.bundle]
name = "P-Touch Label Printer"
identifier = "io.github.vowstar.ptouch-gui"
icon = ["../../data/macos/ptouch-gui.icns"]

# Windows: build.rs uses winresource to embed the icon into the executable.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
ptouch-core = { path = "../ptouch-core" }
ptouch-render = { path = "../ptouch-render" }
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "glow",
    "wayland",
    "x11",
    "persistence",
] }
wgpu = { version = "27", default-features = false, features = ["vulkan", "gles", "wgsl", "std"] }
egui_extras = { version = "0.33", features = ["image"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
